Fix UI overflowing for mobile

--- a/frontend/src/components/LinkBattle/GamePreparation.module.scss
+++ b/frontend/src/components/LinkBattle/GamePreparation.module.scss
@@ -7,4 +7,5 @@
   padding: 20px;
   gap: 12px;
   margin-block: auto;
+  max-width: 100%;
 }
